--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "scripts:findFaq": "lerna run findFaq --scope='scripts'",
     "scripts:getConversationText": "lerna run --scope='scripts' getConversationText -- ",
     "scripts:removeTestDatabases": "lerna run --scope='scripts' removeTestDatabases -- ",
+    "scripts:materializeScrubbedMessagesStats:all": "lerna run --scope='scripts' materializeScrubbedMessagesStats:all",
+    "scripts:materializeScrubbedMessagesStats:latest": "lerna run --scope='scripts' materializeScrubbedMessagesStats:latest",
     "server:start": "lerna run start --scope='chatbot-server-mongodb-public'",
     "eval:conversationQualityCheckPipeline": "lerna run pipeline:conversationQualityCheck --scope='chatbot-eval-mongodb-public'",
     "eval:faqConversationQualityCheckPipeline": "lerna run pipeline:faqConversationQualityCheck --scope='chatbot-eval-mongodb-public'"
