--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -18,7 +18,9 @@
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "pipeline:quizEval": "npm run build && node ./build/pipelines/quizEval.js",
-    "pipeline:discoveryEval": "npm run build && node ./build/pipelines/discoveryEval.js"
+    "pipeline:quizEvalToBraintrust": "npm run build && node ./build/pipelines/quizEvalToBraintrust.js",
+    "pipeline:discoveryEval": "npm run build && node ./build/pipelines/discoveryEval.js",
+    "pipeline:discoveryEvalToBraintrust": "npm run build && node ./build/pipelines/discoveryEvalToBraintrust.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
@@ -41,6 +43,8 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "@supercharge/promise-pool": "^3.2.0",
+    "braintrust": "^0.0.150",
     "dotenv": "^16",
     "mongodb-chatbot-evaluation": "*",
     "mongodb-chatbot-server": "*",
