--- a/packages/mongodb-artifact-generator/tsconfig.json
+++ b/packages/mongodb-artifact-generator/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "lib": ["ES2022"],
     "target": "ES2022",
-    "outDir": "./build"
+    "outDir": "./build",
+    "resolveJsonModule": true,
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/**/*.json"],
 }
