--- a/packages/chatbot-eval-mongodb-public/.env.example
+++ b/packages/chatbot-eval-mongodb-public/.env.example
@@ -7,3 +7,6 @@ OPENAI_ENDPOINT=<Some endpoint>
 OPENAI_API_KEY=<some api key>
 BRAINTRUST_API_KEY=<some api key>
 OPENAI_OPENAI_API_KEY=<from not azure openai>
+LANGFUSE_SECRET_KEY="sk-lf-..."
+LANGFUSE_PUBLIC_KEY="pk-lf-..."
+LANGFUSE_BASE_URL="https://us.cloud.langfuse.com"
