script to get meta docs

--- a/packages/ingest-mongodb-public/.env.example
+++ b/packages/ingest-mongodb-public/.env.example
@@ -21,3 +21,6 @@ GITHUB_ACCESS_TOKEN=ghp_TOKENTOKENTOKEN
 MONGODB_DOT_COM_CONNECTION_URI="mongodb+srv://..."
 MONGODB_DOT_COM_DB_NAME=<name of DB in dotcom cluster>
 MONGODB_COACH_GTM_DATABASE_NAME=<some DB name>
+
+# For getting the "meta" docs site
+MONGODB_META_DATABASE_NAME="docs-meta"
