--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "@langchain/openai": "^0.2.6",
     "@supercharge/promise-pool": "^3.2.0",
     "braintrust": "^0.0.150",
     "dotenv": "^16",
