--- a/packages/chatbot-eval-mongodb-public/package.json
+++ b/packages/chatbot-eval-mongodb-public/package.json
@@ -27,7 +27,8 @@
     "pipeline:faqConversationQualityCheck": "node ./build/pipelines/faqConversationQualityCheck.js",
     "pipeline:linkInclusionCheck": "node ./build/pipelines/linkInclusionCheck.js",
     "pipeline:llmConversationQualityCheck": "node ./build/pipelines/llmConversationQualityCheck.js",
-    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js"
+    "pipeline:biasConversationQualityCheck": "node ./build/pipelines/biasConversationQualityCheck.js",
+    "braintrust:evaluateRagConversationsData": "node ./build/braintrust/evaluateRagConversationsData.js"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
@@ -50,6 +51,8 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.11",
+    "autoevals": "^0.0.85",
+    "braintrust": "^0.0.153",
     "chatbot-server-mongodb-public": "*",
     "dotenv": "^16",
     "llamaindex": "^0.1.21",
