--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -60,8 +60,9 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
-    "@langchain/core": "^0.2.9",
-    "@langchain/openai": "^0.2.1",
+    "@langchain/anthropic": "^0.2.15",
+    "@langchain/core": "^0.2.27",
+    "@langchain/openai": "^0.2.7",
     "common-tags": "^1",
     "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
