--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -17,6 +17,7 @@ envSecrets:
   OPENAI_API_KEY: docs-chatbot-staging
   OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-staging
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
+  OPENAI_GPT_35_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-staging
 
 ingress:
   enabled: true
