--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -26,12 +26,16 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
+    "autoevals": "^0.0.85",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb-chatbot-server": "*",
-    "pm2": "^5.3.0"
+    "openai": "^4.56.0",
+    "pm2": "^5.3.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
