--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "clean": "rm -rf build",
     "build": "tsc -b tsconfig.build.json",
-    "test": "jest",
+    "test": "jest --forceExit",
     "lint": "eslint ./src --ext ts,tsx,js,jsx --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
