--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -11,4 +11,7 @@ MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
 NODE_ENV=development
 ALLOWED_ORIGINS=http://example.com,http://localhost:5173
-OPENAI_GPT_35_CHAT_COMPLETION_DEPLOYMENT=<deployment name>
+OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT=<deployment name>
+JUDGE_EMBEDDING_MODEL="text-embedding-3-large"
+JUDGE_LLM="gpt-4o"
+JUDGE_OPENAI_API_KEY="sk-..."
