--- a/packages/chatbot-server-mongodb-public/environments/qa.yml
+++ b/packages/chatbot-server-mongodb-public/environments/qa.yml
@@ -10,6 +10,7 @@ env:
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
   ENVIRONMENT: qa
   NODE_ENV: qa
+  OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-staging
