--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -34,6 +34,7 @@
     "mongodb-chatbot-server": "*",
     "openai": "^4.56.0",
     "pm2": "^5.3.0",
+    "readline": "^1.3.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
   },
