--- a/packages/chatbot-server-mongodb-public/environments/dev-rel.yml
+++ b/packages/chatbot-server-mongodb-public/environments/dev-rel.yml
@@ -11,6 +11,7 @@ env:
   ENVIRONMENT: qa
   NODE_ENV: qa
   OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
+  OPENAI_API_VERSION: "2024-06-01"
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-staging
