--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -11,6 +11,7 @@ env:
   ALLOWED_ORIGINS: https://knowledge.staging.corp.mongodb.com,https://docs-mongodborg-staging.corp.mongodb.com,https://mongodbcom-cdn.website.staging.corp.mongodb.com,https://docs-mongodb-org-stg.s3.us-east-2.amazonaws.com
   NODE_ENV: staging
   OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
+  OPENAI_API_VERSION: "2024-06-01"
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-staging
