--- a/packages/chatbot-server-mongodb-public/environments/production.yml
+++ b/packages/chatbot-server-mongodb-public/environments/production.yml
@@ -10,14 +10,14 @@ env:
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
   ALLOWED_ORIGINS: https://mongodb.com,https://www.mongodb.com
   NODE_ENV: production
+  OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
+  OPENAI_GPT_35_CHAT_COMPLETION_DEPLOYMENT: DocsAIChatbot
+  OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-embedding-ada-002
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-prod
   OPENAI_ENDPOINT: docs-chatbot-prod
   OPENAI_API_KEY: docs-chatbot-prod
-  OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-prod
-  OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
-  OPENAI_GPT_35_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
 
 ingress:
   enabled: true
