--- a/packages/ingest-mongodb-public/.env.example
+++ b/packages/ingest-mongodb-public/.env.example
@@ -8,6 +8,8 @@ OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
 # Data Sources
 ## MongoDB University
 UNIVERSITY_DATA_API_KEY=<api_key>
+## MongoDB Developer Center
+DEVCENTER_CONNECTION_URI="mongodb+srv://<username>:<password>@devhub-cluster.sewho.mongodb.net/?retryWrites=true&w=majority"
 ## MongoDB Marketing CMS (mongodb.com)
 MONGODB_DOT_COM_CONNECTION_URI="mongodb+srv://..."
 MONGODB_DOT_COM_DB_NAME=<name of DB in dotcom cluster>
