--- a/packages/mongodb-rag-core/tsconfig.json
+++ b/packages/mongodb-rag-core/tsconfig.json
@@ -3,5 +3,9 @@
   "compilerOptions": {
     "outDir": "./build"
   },
-  "include": ["./src/**/*.ts"]
+  "include": [
+    "./src/**/*.ts",
+    "../ingest-mongodb-public/src/sources/chunkOpenApiSpecYaml.test.ts",
+    "../ingest-mongodb-public/src/sources/chunkOpenApiSpecYaml.ts"
+  ]
 }
