--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -50,6 +50,7 @@
     "langchain": "^0.2.17",
     "mongodb-rag-core": "*",
     "mongodb-rag-ingest": "*",
-    "striptags": "^3.2.0"
+    "striptags": "^3.2.0",
+    "yaml": "^2.5.0"
   }
 }
