(EAI-491): Upgrade chatbot preprocessor LLMs + prompting (#487)
* WIP preprocessor refactors for gpt-4o-mini

* Remove evals from server build

* evals for extractMongoDbMetadataFromUserMessage.ts + eval based improvements

* more evals

* integrate new preprocessors into step-back generate user msg

* clean up evals

* debug

* step back eval

* Step back evals + azure openai conf

* readd typechat translator

* mock troubles

* tests passing

* Add missing drone env vars

* update lock

* line breaks between chunks

* update test w preprocessor model

* only for debug

* remove only

* n shot --> few shot

* update filename

* Apply suggestions from code review

Co-authored-by: Nick Larew <nick.larew@mongodb.com>

* implement NL feedback

* consolidate eval helpers

* remove env vars

* rename file

* Update packages/chatbot-server-mongodb-public/src/mongoDbMetadata.ts

Co-authored-by: Nick Larew <nick.larew@mongodb.com>

* NL TS improvements

---------

Co-authored-by: Nick Larew <nick.larew@mongodb.com>

--- a/packages/chatbot-server-mongodb-public/environments/production.yml
+++ b/packages/chatbot-server-mongodb-public/environments/production.yml
@@ -8,8 +8,9 @@ env:
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
   ALLOWED_ORIGINS: https://mongodb.com,https://www.mongodb.com
   NODE_ENV: production
+  OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
+  OPENAI_API_VERSION: "2024-06-01"
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
-  OPENAI_GPT_35_CHAT_COMPLETION_DEPLOYMENT: DocsAIChatbot
   OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-embedding-ada-002
 
 envSecrets:
