--- a/packages/chatbot-server-mongodb-public/environments/qa.yml
+++ b/packages/chatbot-server-mongodb-public/environments/qa.yml
@@ -8,6 +8,8 @@ env:
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
   ENVIRONMENT: qa
   NODE_ENV: qa
+  OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
+  OPENAI_API_VERSION: "2024-06-01"
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
   OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-embedding-ada-002
 
