--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -26,12 +26,12 @@
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.5",
-    "autoevals": "^0.0.85",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb-chatbot-server": "*",
+    "mongodb-chatbot-evaluation": "*",
     "openai": "^4.56.0",
     "pm2": "^5.3.0",
     "readline": "^1.3.0",
@@ -49,7 +49,9 @@
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "autoevals": "^0.0.87",
     "babel-jest": "^29.5.0",
+    "braintrust": "^0.0.155",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
