--- a/packages/benchmarks/.env.example
+++ b/packages/benchmarks/.env.example
@@ -4,6 +4,9 @@ MONGODB_DATABASE_NAME="..."
 MONGODB_QUIZ_QUESTIONS_CONNECTION_URI="mongodb+srv://<user>:<pass>@docs-chatbot-staging.ngvo1.mongodb.net/?retryWrites=true&w=majority"
 MONGODB_QUIZ_QUESTIONS_DATABASE_NAME="datasets"
 MONGODB_QUIZ_QUESTIONS_COLLECTION_NAME="quiz_questions"
+MONGODB_TEXT_TO_DRIVER_CONNECTION_URI="<CONNECTION URI>"
+BRAINTRUST_API_KEY="<some api key>"
+BRAINTRUST_TEXT_TO_DRIVER_PROJECT_NAME="<some project>"
 # Note: We use the Azure-OpenAI style passthrough for the Radiant endpoint
 RADIANT_ENDPOINT="<base_url>/azure"
 RADIANT_API_KEY="rad-API_KEY-iant"
