--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^10.0.0",
     "prettier": "^2",
     "release-it": "^16.1.5",
     "ts-jest": "^29.1.0",
