--- a/packages/mongodb-rag-ingest/package.json
+++ b/packages/mongodb-rag-ingest/package.json
@@ -79,6 +79,7 @@
     "@apidevtools/swagger-parser": "^10.1.0",
     "@azure/openai": "^1.0.0-beta.6",
     "@release-it/bumper": "^5.1.0",
+    "@supercharge/promise-pool": "^3.2.0",
     "acquit": "^1.3.0",
     "acquit-require": "^0.1.1",
     "deep-equal": "^2.2.1",
