--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -45,7 +45,8 @@
     "@azure/openai": "^1.0.0-beta.11",
     "@langchain/openai": "^0.2.6",
     "@supercharge/promise-pool": "^3.2.0",
-    "braintrust": "^0.0.150",
+    "braintrust": "^0.0.158",
+    "bson": "^6.8.0",
     "dotenv": "^16",
     "mongodb-chatbot-evaluation": "*",
     "mongodb-chatbot-server": "*",
