Remove typechat WIP

--- a/packages/scripts/.env.example
+++ b/packages/scripts/.env.example
@@ -8,3 +8,9 @@ FROM_SCRUBBED_COLLECTION_NAME=
 TO_CONNECTION_URI=
 TO_DATABASE_NAME=
 TO_FAQ_COLLECTION_NAME=
+
+OPENAI_ENDPOINT=
+OPENAI_API_KEY=
+OPENAI_CHAT_COMPLETION_DEPLOYMENT=gpt-4o
+OPENAI_CHAT_COMPLETION_MODEL_VERSION=2024-08-06
+OPENAI_CHAT_COMPLETION_API_VERSION=2023-03-15-preview
