--- a/packages/scripts/environments/staging.yml
+++ b/packages/scripts/environments/staging.yml
@@ -27,6 +27,7 @@ cronJobs:
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-staging
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+      OPENAI_CHAT_COMPLETION_API_VERSION: 2023-06-01-preview
     envSecrets:
       MONGODB_CONNECTION_URI: docs-chatbot-staging
       OPENAI_ENDPOINT: docs-chatbot-staging
