--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -38,11 +38,14 @@
     "@cdxoo/dbscan": "^1.1.1",
     "@release-it/bumper": "^5.1.0",
     "@stdlib/random-sample": "^0.2.1",
+    "common-tags": "^1.8.2",
     "csv": "^6.3.1",
     "dotenv": "^16.3.1",
     "mongodb-chatbot-server": "*",
     "mongodb-rag-core": "*",
-    "yaml": "^2.3.4"
+    "openai": "^4.58.1",
+    "yaml": "^2.3.4",
+    "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
