(EAI-480) Site-specific sort order for related resources

--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -67,9 +67,6 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "bundleDependencies": [
-    "mongodb-rag-core"
-  ],
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@leafygreen-ui/badge": "^8.1.2",
@@ -104,7 +101,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
-    "mongodb-rag-core": "^0.0.5",
+    "mongodb-rag-core": "*",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
     "react-transition-group": "^4.4.5",
