--- a/verified-answers.yaml
+++ b/verified-answers.yaml
@@ -1564,3 +1564,23 @@
         Learn"
     - url: https://learn.mongodb.com/learn/course/importing-csv-data-into-mongodb/learning-byte/learn
       title: Importing CSV Data into MongoDB - LEARNING BYTE - Learn
+- answer: >-
+    The best place to start learning about MongoDB is the MongoDB University [Introduction to MongoDB course](https://learn.mongodb.com/learning-paths/introduction-to-mongodb). If you are interested in completing a certification, you can take Introduction to MongoDB as part of a developer learning path with the programming language of your choice. This will prepare you for the [MongoDB Associate Developer](https://learn.mongodb.com/pages/mongodb-associate-developer-exam) certification.
+  author_email: emily.pope@mongodb.com
+  questions:
+    - What should I learn first on MongoDB University?
+  references:
+    - url: https://learn.mongodb.com/learning-paths/introduction-to-mongodb
+      title: "Introduction to MongoDB"
+    - url: https://learn.mongodb.com/pages/mongodb-associate-developer-exam
+      title: "MongoDB Associate Developer Exam"
+- answer: >-
+    To learn how MongoDB fits into the generative AI space, you can start with the [Building GenAI Applications with MongoDB Learning Badge Path](https://learn.mongodb.com/learning-paths/building-genai-apps-learning-badge-path) on MongoDB University. This includes the [Atlas Vector Search](https://learn.mongodb.com/learn/learning-path/atlas-vector-search) course, which will give you a high level introduction to the GenAI space, then help you get started with MongoDB Atlas Vector Search. You'll learn the differences between semantic search and full text search, and how to combine them into hybrid search. Next, you'll learn how to build a RAG application with Langchain and Python, then explore how to create a sophisticated ingestion pipeline. And, be sure to complete the quiz at the end to earn your MongoDB Learning Badge and receive a Credly badge to demonstrate your learning.
+  author_email: emily.pope@mongodb.com
+  questions:
+    - How do I learn about AI and vector search on MongoDB University?
+  references:
+    - url: https://learn.mongodb.com/learning-paths/building-genai-apps-learning-badge-path
+      title: "Building GenAI Applications with MongoDB Learning Badge Path"
+    - url: https://learn.mongodb.com/learn/learning-path/atlas-vector-search
+      title: "Atlas Vector Search Learning Path"
