--- a/packages/ingest-mongodb-public/.env.example
+++ b/packages/ingest-mongodb-public/.env.example
@@ -4,7 +4,7 @@ MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 OPENAI_API_KEY=<api_key>
 OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
-
+OPENAI_API_VERSION="2024-06-01"
 # Data Sources
 ## MongoDB University
 UNIVERSITY_DATA_API_KEY=<api_key>
