--- a/packages/chatbot-server-mongodb-public/environments/production.yml
+++ b/packages/chatbot-server-mongodb-public/environments/production.yml
@@ -6,7 +6,7 @@ env:
   MONGODB_DATABASE_NAME: docs-chatbot-prod
   VECTOR_SEARCH_INDEX_NAME: vector_index
   OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
-  ALLOWED_ORIGINS: https://mongodb.com,https://www.mongodb.com
+  ALLOWED_ORIGINS: https://mongodb.com,https://www.mongodb.com,https://learn.mongodb.com
   NODE_ENV: production
   OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
   OPENAI_API_VERSION: "2024-06-01"
