--- a/.drone.yml
+++ b/.drone.yml
@@ -15,8 +15,9 @@ trigger:
 
 steps:
   - name: test
-    image: node:20-alpine
+    image: node:20
     commands:
+      - sudo apt-get install -y libssl-dev
       - npm ci
       - npm run build
       - npm run lint
