--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -14,4 +14,4 @@ ALLOWED_ORIGINS=http://example.com,http://localhost:5173
 OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT=<deployment name>
 OPENAI_API_VERSION="2024-06-01"
 JUDGE_EMBEDDING_MODEL="text-embedding-3-small"
-JUDGE_LLM="gpt-4o"
+JUDGE_LLM="gpt-4o-mini"
