--- a/packages/benchmarks/.env.example
+++ b/packages/benchmarks/.env.example
@@ -10,6 +10,6 @@ BRAINTRUST_TEXT_TO_DRIVER_PROJECT_NAME="<some project>"
 # Note: We use the Azure-OpenAI style passthrough for the Radiant endpoint
 RADIANT_ENDPOINT="<base_url>/azure"
 RADIANT_API_KEY="rad-API_KEY-iant"
-OPENAI_API_VERSION="some-placeholder"
+OPENAI_API_VERSION="2024-06-01"
 # Cookie must be updated daily
 MONGODB_AUTH_COOKIE="<Auth cookie from CorpSecure-protected site>"
