--- a/packages/mongodb-chatbot-ui/tsconfig.declarations.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.declarations.json
@@ -27,5 +27,11 @@
     "noImplicitThis": true
   },
   "include": ["src"],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/test/**/*.ts",
+    "src/test/**/*.tsx",
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
