more model provider support

--- a/packages/benchmarks/.env.example
+++ b/packages/benchmarks/.env.example
@@ -5,11 +5,14 @@ MONGODB_QUIZ_QUESTIONS_CONNECTION_URI="mongodb+srv://<user>:<pass>@docs-chatbot-
 MONGODB_QUIZ_QUESTIONS_DATABASE_NAME="datasets"
 MONGODB_QUIZ_QUESTIONS_COLLECTION_NAME="quiz_questions"
 MONGODB_TEXT_TO_DRIVER_CONNECTION_URI="<CONNECTION URI>"
+BRAINTRUST_ENDPOINT="https://api.braintrust.dev/v1/proxy"
 BRAINTRUST_API_KEY="<some api key>"
 BRAINTRUST_TEXT_TO_DRIVER_PROJECT_NAME="<some project>"
 # Note: We use the Azure-OpenAI style passthrough for the Radiant endpoint
 RADIANT_ENDPOINT="<base_url>/azure"
 RADIANT_API_KEY="rad-API_KEY-iant"
 OPENAI_API_VERSION="2024-06-01"
+OPENAI_ENDPOINT="https://<resource_name>.openai.azure.com/"
+OPENAI_API_KEY="<api_key>"
 # Cookie must be updated daily
 MONGODB_AUTH_COOKIE="<Auth cookie from CorpSecure-protected site>"
