refactor to use correct imports

--- a/packages/mongodb-rag-ingest/package.json
+++ b/packages/mongodb-rag-ingest/package.json
@@ -25,8 +25,7 @@
     "README.md"
   ],
   "exports": {
-    ".": "./build/index.js",
-    "./core": "./build/core/index.js"
+    ".": "./build/index.js"
   },
   "bin": {
     "ingest": "./build/main.js"
