exports as main

--- a/packages/mongodb-rag-ingest/package.json
+++ b/packages/mongodb-rag-ingest/package.json
@@ -24,9 +24,7 @@
     "build",
     "README.md"
   ],
-  "exports": {
-    ".": "./build/index.js"
-  },
+  "main": "./build/index.js",
   "bin": {
     "ingest": "./build/main.js"
   },
