--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -41,16 +41,23 @@
     "eslint-plugin-prettier": "^4",
     "eslint-plugin-tsdoc": "^0.2.14",
     "jest": "^29.5.0",
+    "nock": "^13.5.5",
     "prettier": "^2",
     "release-it": "^16.1.5",
     "ts-jest": "^29.1.0",
     "typescript": "^5"
   },
   "dependencies": {
-    "@release-it/bumper": "^5.1.0",
+    "common-tags": "^1.8.2",
+    "docdoctor": "^0.1.2",
     "dotenv": "^16",
+    "encodeurl": "^2.0.0",
+    "html-to-text": "^9.0.5",
+    "jsonl-parse-stringify": "^1.0.3",
     "mongodb-rag-core": "*",
     "mongodb-rag-ingest": "*",
-    "striptags": "^3.2.0"
+    "node-fetch": "^3.3.2",
+    "striptags": "^3.2.0",
+    "yaml": "^2.6.0"
   }
 }
