--- a/packages/ingest-mongodb-public/package.json
+++ b/packages/ingest-mongodb-public/package.json
@@ -22,7 +22,7 @@
     "ingest:embed": "ingest embed --config ./build/config.js",
     "ingest:pages:meta": "ingest pages --config ./build/meta.config.js",
     "ingest:k8s:coachGtmPages": "../../node_modules/mongodb-rag-ingest/build/main.js pages --config ./build/coachGtm.config.js",
-    "test": "jest --forceExit"
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js --forceExit"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7",
