--- a/examples/quick-start/packages/server/package.json
+++ b/examples/quick-start/packages/server/package.json
@@ -17,9 +17,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@azure/openai": "^1.0.0-beta.6",
     "@types/node": "^16.0.0",
     "express": "^4.18.2",
-    "mongodb-chatbot-server": "*"
+    "mongodb-chatbot-server": "*",
+    "mongodb-rag-core": "*"
   }
 }
