--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "mongodb-chatbot-evaluation": "*",
     "mongodb-chatbot-server": "*",
+    "mongodb-chatbot-verified-answers": "*",
     "pm2": "^5.3.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
