Update tsconfig for build

--- a/packages/mongodb-chatbot-ui/tsconfig.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.json
@@ -24,5 +24,10 @@
 
     "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./test/**/*.ts",
+    "./test/**/*.tsx"
+  ],
 }
