--- a/packages/mongodb-chatbot-ui/tsconfig.build.json
+++ b/packages/mongodb-chatbot-ui/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*.test.ts", "test/**/*.ts"]
+  "exclude": [
+    "./**/*.test.ts",
+    "./**/*.test.tsx",
+    "./test"
+  ]
 }
