--- a/packages/mongodb-chatbot-evaluation/package.json
+++ b/packages/mongodb-chatbot-evaluation/package.json
@@ -64,6 +64,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "dotenv": "^16.4.4",
     "typescript": "^5.4.5"
   }
