--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "license": "Apache-2.0",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "codemods"
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap --force-local",
