only VAs in existing retrieval eval cases

--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -23,8 +23,7 @@
     "start": "pm2-runtime ./build/index.js",
     "test": "jest --forceExit",
     "release": "release-it",
-    "evaluate": "braintrust eval",
-    "vaToConvo": "npm run build && node ./build/processors/vaToConvo.js"
+    "evaluate": "braintrust eval"
   },
   "dependencies": {
     "common-tags": "^1.8.2",
