--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -61,7 +61,6 @@
     "readline": "^1.3.0",
     "release-it": "^16.1.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.0.3",
-    "yaml": "^2.6.0"
+    "typescript": "^5.0.3"
   }
 }
