remove coll name var b/c using default

--- a/.drone.yml
+++ b/.drone.yml
@@ -32,6 +32,7 @@ steps:
       OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
       OPENAI_API_VERSION: "2024-06-01"
       BRAINTRUST_TEXT_TO_DRIVER_PROJECT_NAME: "text-to-node-js-driver-benchmark"
+      MONGODB_EMBEDDED_CONTENT_COLLECTION_NAME: "embedded_content_text-embedding-3-small"
       # Setting this placeholder to make test suite pass in the CI
       BRAINTRUST_API_KEY: "PLACEHOLDER_UNTIL_OFFICIAL VENDOR"
       MONGODB_CONNECTION_URI:
