--- a/packages/ingest-mongodb-public/.env.example
+++ b/packages/ingest-mongodb-public/.env.example
@@ -3,7 +3,8 @@ MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 OPENAI_API_KEY=<api_key>
-OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
+OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT="text-embedding-3-small"
 OPENAI_API_VERSION="2024-06-01"
 # Data Sources
 ## MongoDB University
