--- a/packages/mongodb-chatbot-server/.env.example
+++ b/packages/mongodb-chatbot-server/.env.example
@@ -2,7 +2,8 @@ PORT=3000
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 OPENAI_API_KEY=<api_key>
 OPENAI_API_VERSION="2024-06-01"
-OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
+OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT="text-embedding-3-small"
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
