--- a/packages/mongodb-chatbot-verified-answers/.env.example
+++ b/packages/mongodb-chatbot-verified-answers/.env.example
@@ -2,6 +2,6 @@ MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 MONGODB_CONNECTION_URI=<connection_uri>
 OPENAI_EMBEDDING_MODEL_NAME=text-embedding-ada-002
 OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
-OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 OPENAI_API_KEY=<api_key>
