--- a/packages/chatbot-server-mongodb-public/environments/production.yml
+++ b/packages/chatbot-server-mongodb-public/environments/production.yml
@@ -11,7 +11,8 @@ env:
   OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT: gpt-4o-mini
   OPENAI_API_VERSION: "2024-06-01"
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
-  OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-embedding-ada-002
+  OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
+  OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-prod
