--- a/packages/mongodb-artifact-generator/.env.example
+++ b/packages/mongodb-artifact-generator/.env.example
@@ -2,7 +2,7 @@ MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 OPENAI_API_KEY=<api_key>
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
-OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 GITHUB_ACCESS_TOKEN=<GitHub Personal Access Token> # https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens
 JIRA_USERNAME=<Jira Bot Username>
