--- a/packages/mongodb-rag-core/.env.example
+++ b/packages/mongodb-rag-core/.env.example
@@ -1,7 +1,8 @@
 PORT=3000
 OPENAI_ENDPOINT=https://<resource_name>.openai.azure.com/
 OPENAI_API_KEY=<api_key>
-OPENAI_EMBEDDING_DEPLOYMENT=<deployment_name>
+OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT="text-embedding-3-small"
+OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT="docs-chatbot-embedding-ada-002"
 OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 OPENAI_EMBEDDING_MODEL_VERSION=2023-03-15-preview
 OPENAI_CHAT_COMPLETION_DEPLOYMENT=<deployment_name>
