--- a/packages/scripts/environments/production.yml
+++ b/packages/scripts/environments/production.yml
@@ -27,11 +27,12 @@ cronJobs:
     env:
       MONGODB_DATABASE_NAME: docs-chatbot-prod
       OPENAI_CHAT_COMPLETION_MODEL_VERSION: 2023-06-01-preview
+      OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
+      OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
     envSecrets:
       MONGODB_CONNECTION_URI: docs-chatbot-prod
       OPENAI_ENDPOINT: docs-chatbot-prod
       OPENAI_API_KEY: docs-chatbot-prod
-      OPENAI_EMBEDDING_DEPLOYMENT: docs-chatbot-prod
       OPENAI_CHAT_COMPLETION_DEPLOYMENT: docs-chatbot-prod
     resources:
       # guaranteed amount of resources
