RRF initial implementation

--- a/packages/mongodb-rag-core/.env.example
+++ b/packages/mongodb-rag-core/.env.example
@@ -10,4 +10,5 @@ OPENAI_CHAT_COMPLETION_MODEL_VERSION=<model_version>
 MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
+FTS_INDEX_NAME="fts"
 OPENAI_API_VERSION="2024-06-01"
