add separate experiments suite

--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -10,6 +10,7 @@ OPENAI_CHAT_COMPLETION_MODEL_VERSION=2023-05-15
 MONGODB_CONNECTION_URI=<connection_uri>
 MONGODB_DATABASE_NAME=<docs-chatbot-ENV>
 VECTOR_SEARCH_INDEX_NAME=<index_name>
+FTS_INDEX_NAME="fts"
 NODE_ENV=development
 ALLOWED_ORIGINS=http://example.com,http://localhost:5173
 OPENAI_PREPROCESSOR_CHAT_COMPLETION_DEPLOYMENT=<deployment name>
