--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -51,7 +51,8 @@
     "@typescript-eslint/parser": "^5.58.0",
     "autoevals": "^0.0.92",
     "babel-jest": "^29.5.0",
-    "braintrust": "^0.0.167",
+    "braintrust": "^0.0.171",
+    "cohere-ai": "^7.14.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
